[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://art/sprite principal.png" type="Texture" id=2]
[ext_resource path="res://scenes/vida.tscn" type="PackedScene" id=3]
[ext_resource path="res://sons/tiro.wav" type="AudioStream" id=4]
[ext_resource path="res://sons/jump.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17, 22.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "andando"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.164706, 0.164706, 0.164706, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.172549, 0.121569, 0.121569, 1 )
border_blend = true
corner_radius_top_left = 239
corner_radius_top_right = 239
corner_radius_bottom_right = 239
corner_radius_bottom_left = 239

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 24.5, 14.5 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 40, 18 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -8, -14.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -10.25, -10 )
scale = Vector2( 1.66129, 1.69231 )
texture = ExtResource( 2 )
hframes = 5
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/RESET = SubResource( 2 )
anims/andando = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1, 0 )
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.83
drag_margin_right = 0.32
drag_margin_bottom = 0.64

[node name="vida" parent="." instance=ExtResource( 3 )]
modulate = Color( 0.8, 0.752941, 0.752941, 1 )
margin_left = -103.0
margin_top = -162.0
margin_right = 97.0
margin_bottom = -142.0
custom_styles/bg = SubResource( 4 )
max_value = 6.0
step = 1.0
value = 6.0
rounded = true
percent_visible = false

[node name="somPulo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="somTiro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="AreaPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaPlayer"]
position = Vector2( -8, -26 )
shape = SubResource( 5 )

[connection signal="body_entered" from="AreaPlayer" to="." method="_on_AreaPlayer_body_entered"]
